--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,29 +16,29 @@
         android:id="@+id/button_toast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_label_toast"
-        android:textColor="@android:color/white"
         android:background="@color/colorPrimary"
-        android:onClick="showToast"/>
+        android:onClick="showToast"
+        android:text="@string/button_label_toast"
+        android:textColor="@android:color/white" />
 
     <TextView
         android:id="@+id/show_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/count_initial_value"
-        android:textSize="@dimen/count_text_size"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
+        android:layout_weight="2"
         android:background="@color/myBackgroundColor"
         android:gravity="center"
-        android:layout_weight="2"/>
+        android:text="@string/count_initial_value"
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/count_text_size"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/button_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_label_count"
-        android:textColor="@android:color/white"
         android:background="@color/colorPrimary"
-        android:onClick="countUp"/>
+        android:onClick="countUp"
+        android:text="@string/button_label_count"
+        android:textColor="@android:color/white" />
 </LinearLayout>
